# Open-Beam-Interface

./: .buildinfo  .gitignore  .pdm-python  README.md  base_commands.py  build.py  commands.html  config.html  development.html  genindex.html  gui.html  hardware.html  index.html  install_both  installation.html  macros.html  microscope.toml  mkdocs.yml  objects.inv  pyproject.toml  readme.md  readme.txt  report.txt  run_both.py  search.html  searchindex.js  stats.txt  update_both  usage.html
Docs/: Blanking.md  Cordinate System.md  Install.md  commands.md  config.md  digital_io.md  index.md  pyproject.toml
Docs/source/: Commands.rst  Configuration.rst  conf.py  gateware.rst  generate_wavedrom.py  index.rst
Docs/source/Accessory_Boards/: DSC_Switch.rst
Docs_sphinx/: commands.md
Gateware/: Gateware.md  README.md  arg_test.py  bitmap.py  blank_test.py  build  commands.md  in_test.py  out_test.py  pyproject.toml  run  run.py  setup  sim  start.sh
Gateware/applet/open_beam_interface/: __init__.py  base_commands2.py  base_commands3.py  base_commands4.py  run.py  run_2.py  run_api.py  test.py  testc.py  testd.py  testf.py
Gateware/applet/open_beam_interface/base_commands/: __init__ copy.py  __init__.py  commands.py  frame_buffer.py  sequences.py  structs.py  tiff_export.py  transfer.py  transfer2.py
Gateware/docs/: commands.md  digital_io.md
Gateware/glasgowcontrib/applet/open_beam_interface/: __init__.py  base_commands.py  board_sim.py  resources.py  test.py  test_old.py
Gateware/scripts/: README.md  blank_dot_test.py  blank_test.py  boilerplate.py  box.py  convert_bitmap.py  convert_csv.py  parameter_test.py  raster_test.py  read_stdin.py  test.py  test_raster_frame.py
Hardware/: hardware.md
Software/: .pdm-python  README.md  beam_interface.py  frame_buffer.py  gui.py  magcal.csv  magelectron.csv  microscope.py  microscope.toml  pyproject.toml  readme.md  scan_socket.py  scan_stream.py  stream_interface.py  stream_interface2.py  stream_interface_old.py  support.py  test.py  tiff_export.py
Software/glasgow_scripts/: blank_dot_test.py  blank_test.py  boilerplate.py  box.py  convert_bitmap.py  convert_csv.py  more_shapes.py  parameter_test.py  test_loopback.py  test_raster_frame.py
Software/gui_modules/: bmp_import.py  bmp_import_CHEAP.py  settings.py  test_calibrate.py
Software/src/obi_software/: async_gui.py  base_commands.py  beam_interface.py  benchmark.py  debug_gui.py  ext_test.py  frame_buffer.py  gui.py  hilbert.py  minimal_gui.py  new.py  new_new.py  stream_interface.py  test_queue.py  threads.py  tiff_export.py  ui_buffer.py  ui_interface.py
Software/src/obi_software/gui_modules/: bmp_import.py  image_display.py  settings.py  test_qthread.py  test_vectorconv.py
Software/src/obi_software/scripts/: benchmark.py  bitmap.py  convert_bitmap.py  convert_csv.py  ext_test.py  hilbert.py  shapes.py  stream_csv.py
Software/stream_scripts/: shapes.py  stream_bitmap.py  stream_csv.py
Software/web_ui/: index.html
Software/web_ui/css/: styles.css
Software/web_ui/js/: script.js
_sources/: config.md.txt  (+6 more)
obi_applet/glasgowcontrib/applet/open_beam_interface/base_commands/: pyproject.toml
software/: README.md  echoserver.py  frametest.py  launch.py  pyproject.toml  test.py  test_latency_monitor.py  test_latency_monitor_standalone.py  testiter.py
software/applet/open_beam_interface/: __init__.py
software/commands/: __init__.py  low_level_commands.py  structs.py
software/configs/: fei_db.toml  fib_200.toml  jeol_840_6300_6400.toml  zeiss.toml
software/docs/source/: commands.md  conf.py  config.md  development.md  hardware.md  index.rst  installation.md  macros.md
software/docs/source/_static/css/: custom.css
software/docs/source/commands/: low_level_commands.md  structs.md
software/docs/source/hardware/: adjustment_guide.md  digital_io.md  io_bus.md  main_digital_io.md  overview.md
software/docs/source/hardware/accessory/: generic_selector.md
software/docs/source/macros/: bmp2vector.md
software/docs/source/usage/: gui.md  scripting.md
software/examples/: image_acquisition_direct.py  image_acquisition_tcp.py  image_acqusition_example.py  vector_csv_acquisition.py
software/gui/: main.py
software/gui/components/: __init__.py  image_display.py  scan_parameters.py
software/macros/: __init__.py  frame_buffer.py  raster.py
software/obi/: launch.py  logsetup.py
software/obi/applet/open_beam_interface/: __init__.py  args.py  average.py  fwd_server.py  interface.py
software/obi/applet/open_beam_interface/modules/: __init__.py  bus_controller.py  command_parser.py  debug.py  raster_scanner.py  structs.py  supersampler.py
software/obi/commands/: __init__.py  low_level_commands.py  structs.py
software/obi/config/: __init__.py  applet.py  meta.py
software/obi/gui/: launcher.py  main.py  plugin.py
software/obi/gui/components/: __init__.py  beamcontrol.py  bmp2vector_controls.py  calibration.py  console.py  dac_calibration.py  debug.py  dose_calc.py  file_io.py  image_display.py  latency_monitor.py  mag_calibration.py  manual_dac_ctrl.py  scan_parameters.py  waveform.py
software/obi/macros/: __init__.py  bmp2vector.py  frame_buffer.py  raster.py  vector.py
software/obi/support/: __init__.py  logsetup.py  scalebar.py
software/obi/transfer/: __init__.py  abc.py  direct.py  mock.py  stream.py  support.py  tcp.py
software/tests/: test_gateware.py
software/tests/commands/: test_structs.py
software/tests/config/: test.toml  test_full.toml  test_meta.py  test_minimal.toml
software/tests/gateware/: board_sim.py  test_open_beam_interface.py
software/tests/gtkwave/: average.gtkw  averaging.gtkw  avgovf.gtkw  avgovg2.gtkw  blanking.gtkw  bus_controller_4.gtkw  exec_streams.gtkw  fifo_streams.gtkw  raster_pixels.gtkw  ss_avg_ovf.gtkw
software/tests/macros/: test_frame_buffer.py  test_raster.py  test_vector.py
software/tests/test_commands/: test_structs.py
software/tests/test_gateware/: test_gateware.py
software/tests/test_macros/: test_frame_buffer.py
software/transfer/: __init__.py  direct.py  stream.py  tcp.py
(+343 files in other folders)
