[project]
name = "open_beam_interface"
version = "0"
description = "Electron microscope image capture with Glasgow and Open Beam Interface hardware"
authors = [
    {name = "nanographs"},
    {name = "isabelburgos", email = "isabel@nanographs.io"},
]
dependencies = [
    "numpy",
    "tifffile",
    "ome-types",
    "Pillow",
    "hilbertcurve",
    "matplotlib",
    "glasgow[builtin-toolchain] @ git+https://github.com/isabelburgos/glasgow@main#subdirectory=software"
]
requires-python = "!=3.10.0,!=3.10.1,!=3.10.2,~=3.9"
readme = "README.md"
license = {text = "\"0BSD OR Apache-2.0\""}

[project.optional-dependencies]
gui = ["PyQt6",
        "pyqtgraph",
        "qasync",
        ]

[project.scripts]
obi_run = "glasgowcontrib.applet.open_beam_interface.run:run"
obi_gui = "obi_software.gui:run_gui"
obi_shape = "obi_software.scripts.shapes:main"

[project.entry-points."glasgow.applet"]
open_beam_interface = "glasgowcontrib.applet.open_beam_interface:OBIApplet"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["glasgowcontrib"]

[tool.pdm.scripts]
_.env = {GLASGOW_OUT_OF_TREE_APPLETS = "I-am-okay-with-breaking-changes"}
gui.cmd = "python -m obi_software.gui 2224 --config_path ~/open-beam-interface/microscope.toml"
debug_gui.cmd = "python -m obi_software.gui 2224 --debug --config_path ~/open-beam-interface/microscope.toml"
test_s.cmd = "python -m unittest obi_software.test"
hilbert.cmd = "python -m obi_software.hilbert"
run.cmd = "glasgow --statistics run open_beam_interface -V 5 --pin-ext-ibeam-scan-enable 0 --pin-ext-ibeam-scan-enable-2 1 --pin-ext-ibeam-blank-enable 2 --pin-ext-ibeam-blank-enable-2 3 --pin-ibeam-blank-low 4 --pin-ibeam-blank-high 5 --pin-ebeam-blank 6 --pin-ebeam-blank-2 7 tcp::2224 --xflip"
run_script.cmd = "glasgow -script {args} open_beam_interface -V 5 --pin-ext-ibeam-scan-enable 0 --pin-ext-ibeam-scan-enable-2 1 --pin-ext-ibeam-blank-enable 2 --pin-ext-ibeam-blank-enable-2 3 --pin-ibeam-blank-low 4 --pin-ibeam-blank-high 5 --pin-ebeam-blank 6 --pin-ebeam-blank-2 7"
test_g.cmd = "python -m unittest glasgowcontrib.applet.open_beam_interface.test"
build.cmd = "glasgow build --rev C3 open_beam_interface --pin-ext-ibeam-scan-enable 0 --pin-ext-ibeam-scan-enable-2 1 --pin-ext-ibeam-blank-enable 2 --pin-ext-ibeam-blank-enable-2 3 --pin-ibeam-blank-low 4 --pin-ibeam-blank-high 5 --pin-ebeam-blank 6 --pin-ebeam-blank-2 7"
build.env = {AMARANTH_verbose = "1"}

[tool.pdm.dev-dependencies]
test = ["amaranth@ git+https://github.com/whitequark/amaranth@testbenchessssss"]
