[project]
name = "open_beam_interface"
version = "0"
description = "Electron microscope image capture with Glasgow and Open Beam Interface hardware"
authors = [
    {name = "nanographs"},
    {name = "isabelburgos", email = "isabel@nanographs.io"},
]
dependencies = [
    "numpy",
    "tifffile",
    "Pillow",
    "matplotlib",
    "sphinx-inline-tabs>=2023.4.21",
    "sphinx-copybutton>=0.5.2",
    "glasgow[builtin-toolchain] @ git+https://github.com/isabelburgos/glasgow@main#subdirectory=software",
]
requires-python = "!=3.10.0,!=3.10.1,!=3.10.2,~=3.9"
readme = "README.md"
license = {text = "\"0BSD OR Apache-2.0\""}

[project.optional-dependencies]
gui = ["PyQt6",
        "pyqtgraph",
        "qasync",
        ]
hilbert = ["hilbertcurve"]
metadata = ["ome-types"]

[project.scripts]
obi_run = "Gateware.applet.open_beam_interface.run:run" ## wrapper around glasgow cli
obi_gui = "obi_software.gui:run_gui" ## main imaging ui
obi_shape = "obi_software.scripts.shapes:main"

[project.entry-points."glasgow.applet"]
open_beam_interface = "Gateware.applet.open_beam_interface:OBIApplet"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["Gateware"]

[tool.pdm.scripts]
_.env = {GLASGOW_OUT_OF_TREE_APPLETS = "I-am-okay-with-breaking-changes"}
## wrapper around glasgow cli
obi_server.cmd = "obi_run --config_path ~/open-beam-interface/configs/jsm_6400.toml server 2224"
obi_script.cmd = "obi_run script --config_path ~/open-beam-interface/configs/jsm_6400.toml script --script_path {args}"
## used with server
gui.cmd = "python -m obi_software.gui 2224 --config_path ~/open-beam-interface/configs/jsm_6400.toml"
debug_gui.cmd = "python -m obi_software.gui 2224 --debug --config_path ~/open-beam-interface/configs/jsm_6400.toml"
hilbert.cmd = "python -m obi_software.hilbert"
## unit tests
test_g.cmd = "python -m unittest glasgowcontrib.applet.open_beam_interface.test"
test_s.cmd = "python -m unittest obi_software.test"
build.cmd = "glasgow build --rev C3 open_beam_interface --pin-ext-ibeam-scan-enable 0 --pin-ext-ibeam-scan-enable-2 1 --pin-ext-ibeam-blank-enable 2 --pin-ext-ibeam-blank-enable-2 3 --pin-ibeam-blank-low 4 --pin-ibeam-blank-high 5 --pin-ebeam-blank 6 --pin-ebeam-blank-2 7"
build.env = {AMARANTH_verbose = "1"}
## docs
build_docs.cmd = "sphinx-build -M html Docs_sphinx/source/ Docs_sphinx/build/"
build_docs_2.cmd = "mkdocs build"

[tool.pdm.dev-dependencies]
test = ["amaranth@ git+https://github.com/amaranth-lang/amaranth@main"]
docs = [
    "sphinx>=7.3.7",
    "furo>=2024.5.6",
    "yowasp-wavedrom>=3.5.0.8",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinxcontrib-yowasp-wavedrom>=1.4",
    ]
docs_2 = [
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.1",
]