[project]
name = "Docs"
version = "0"
description = "Default template for PDM package"
authors = [
    {name = "isabelburgos", email = "isabel@nanographs.io"},
]
dependencies = [
    "furo>=2024.5.6",
    "yowasp-wavedrom>=3.5.0.8",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinxcontrib-yowasp-wavedrom>=1.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = ""}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
build.cmd = "sphinx-build -M html ./source/ ./build/"

