[project]
name = "glasgowcontrib-applet-open_beam_interface"
version = "0"
description = "Interface to scanning image capture"
authors = [{name = "nanographs"}]
license = {text = "0BSD OR Apache-2.0"}

requires-python = "!=3.10.0,!=3.10.1,!=3.10.2,~=3.9"
dependencies = ["glasgow"]

[project.entry-points."glasgow.applet"]
open_beam_interface = "glasgowcontrib.applet.open_beam_interface:OBIApplet"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["glasgowcontrib"]

[tool.pdm.scripts]
_.env = {GLASGOW_OUT_OF_TREE_APPLETS = "I-am-okay-with-breaking-changes"}
run.cmd = "glasgow -v --statistics run open_beam_interface -V 5 --pin-ext-ebeam-enable 1 tcp::2224"
test.cmd = "python -m unittest glasgowcontrib.applet.open_beam_interface.test"