[project]
name = "glasgowcontrib-applet-open_beam_interface"
version = "0"
description = "Interface to scanning image capture"
authors = [{name = "nanographs"}]
license = {text = "0BSD OR Apache-2.0"}

requires-python = "!=3.10.0,!=3.10.1,!=3.10.2,~=3.9"
dependencies = [
    "glasgow@ git+https://github.com/isabelburgos/glasgow@main#subdirectory=software",
]

[project.entry-points."glasgow.applet"]
open_beam_interface = "glasgowcontrib.applet.open_beam_interface:OBIApplet"

[project.scripts]
obi_run = "run:run"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["glasgowcontrib"]

[tool.pdm.scripts]
_.env = {GLASGOW_OUT_OF_TREE_APPLETS = "I-am-okay-with-breaking-changes"}
run.cmd = "glasgow -v --statistics run open_beam_interface -V 5 --pin-ext-ibeam-scan-enable 0 --pin-ext-ibeam-scan-enable-2 1 --pin-ext-ibeam-blank-enable 2 --pin-ext-ibeam-blank-enable-2 3 --pin-ibeam-blank-low 4 --pin-ibeam-blank-high 5 --pin-ebeam-blank 6 --pin-ebeam-blank-2 7 tcp::2224"
run_script.cmd = "glasgow script {args} open_beam_interface -V 5 --pin-ext-ibeam-scan-enable 0 --pin-ext-ibeam-scan-enable-2 1 --pin-ext-ibeam-blank-enable 2 --pin-ext-ibeam-blank-enable-2 3 --pin-ibeam-blank-low 4 --pin-ibeam-blank-high 5 --pin-ebeam-blank 6 --pin-ebeam-blank-2 7"
test.cmd = "python -m unittest glasgowcontrib.applet.open_beam_interface.test"
build.cmd = "AMARANTH_verbose=1 glasgow build open_beam_interface -V 5 --pin-ext-ibeam-scan-enable 0 --pin-ext-ibeam-scan-enable-2 1 --pin-ext-ibeam-blank-enable 2 --pin-ext-ibeam-blank-enable-2 3 --pin-ibeam-blank-low 4 --pin-ibeam-blank-high 5 --pin-ebeam-blank 6 --pin-ebeam-blank-2 7"

[tool.pdm.dev-dependencies]
test = ["amaranth@ git+https://github.com/whitequark/amaranth@testbenchessssss"]