[project]
name = "obi_software"
version = "0"
description = "Software for electron microscope image capture with Glasgow and Open Beam Interface hardware"
authors = [
    {name = "isabelburgos", email = "isabel@nanographs.io"},
]
dependencies = ["numpy",
                "Pillow",
                "PyQt6",
                "pyqtgraph",
                "qasync",
                "tifffile"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "\"0BSD OR Apache-2.0\""}

[project.scripts]
obi_gui = "obi_software.gui:run_gui"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
gui.cmd = "python src/obi_software/gui.py"
debug_gui.cmd = "python src/obi_software/debug_gui.py"
