[project]
name = "obi_software"
version = "0"
description = "Software for electron microscope image capture with Glasgow and Open Beam Interface hardware"
authors = [
    {name = "isabelburgos", email = "isabel@nanographs.io"},
]
dependencies = ["numpy",
                "tifffile",
                "ome-types",
                "Pillow",
                "hilbertcurve"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "\"0BSD OR Apache-2.0\""}

[project.optional-dependencies]
gui = ["PyQt6",
        "pyqtgraph",
        "qasync",
        ]

[project.scripts]
obi_gui = "obi_software.gui:run_gui"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
gui.cmd = "python -m obi_software.gui 2224 --config_path ~/open-beam-interface/microscope.toml"
debug_gui.cmd = "python -m obi_software.gui 2224 --debug --config_path ~/open-beam-interface/microscope.toml"
test.cmd = "python -m unittest test"
hilbert.cmd = "python -m obi_software.hilbert"
