[project]
name = "open_beam_interface"
version = "0"
description = "Electron microscope image capture with Glasgow and Open Beam Interface hardware"
authors = [
    {name = "nanographs"},
    {name = "isabelburgos", email = "isabel@nanographs.io"},
]
dependencies = [
    "glasgow[builtin-toolchain] @ git+https://github.com/isabelburgos/glasgow@main#subdirectory=software",
]
requires-python = "!=3.10.0,!=3.10.1,!=3.10.2,~=3.9"
readme = "README.md"
license = {text = "\"0BSD OR Apache-2.0\""}

[project.entry-points."glasgow.applet"]
open_beam_interface = "applet.open_beam_interface:OBIApplet"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["applet"]

[tool.pdm.scripts]
_.env = {GLASGOW_OUT_OF_TREE_APPLETS = "I-am-okay-with-breaking-changes"}
## unit tests
test.cmd = "python -m unittest test"