[project]
name = "obi"
version = "0"
description = "Electron microscope image capture with Glasgow and Open Beam Interface hardware"
authors = [
    {name = "nanographs"},
    {name = "isabelburgos", email = "isabel@nanographs.io"},
]
dependencies = [
    "glasgow[builtin-toolchain] @ git+https://github.com/GlasgowEmbedded/glasgow@main#subdirectory=software",
    "numpy>=2.0.1",
    "tifffile>=2024.7.21",
    "Pillow>=10.4.0",
    "tomlkit>=0.13.0",
]
requires-python = "!=3.10.0,!=3.10.1,!=3.10.2,~=3.9"
readme = "README.md"
license = {text = "\"0BSD OR Apache-2.0\""}

[project.entry-points."glasgow.applet"]
open_beam_interface = "obi.applet.open_beam_interface:OBIApplet"


[project.optional-dependencies]
":gui" = [
    "pyqtgraph>=0.13.7",
    "PyQt6>=6.7.1",
    "qasync>=0.27.1",
]
":docs" = [
    "sphinx>=7.4.7",
    "myst-parser>=3.0.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["applet"]

[tool.pdm.scripts]
_.env = {GLASGOW_OUT_OF_TREE_APPLETS = "I-am-okay-with-breaking-changes"}
launch.cmd = "python -m obi.launch"
gui.cmd = "python -m obi.gui.main"
## build gateware with verbose toolchain output
build.cmd = "glasgow -vv build --rev C3 open_beam_interface --pins-ebeam-scan-enable 0 --pins-ebeam-blank-enable 1 --pins-ebeam-blank 2,3"
build.env = {AMARANTH_verbose = "1"}
## docs
docs.cmd = "sphinx-build -M html docs/source/ docs/build/"
## unit tests
test.cmd = "python -m unittest"
[tool.pdm.dev-dependencies]
dev = [
    "rich>=13.7.1",
]
