[project]
name = "obi_commands"
version = "0"
description = "Interface to scanning image capture"
authors = [{name = "nanographs"}]
license = {text = "0BSD OR Apache-2.0"}

requires-python = "!=3.10.0,!=3.10.1,!=3.10.2,~=3.9"
dependencies = []
# dependencies = ["amaranth @git+https://github.com/amaranth-lang/amaranth@main"]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
